Fix bio background image position on small devices.

--- a/main.css
+++ b/main.css
@@ -541,7 +541,7 @@ footer {
   }
 
   #bio {
-    background: url('img/BioSectionBG.jpg') no-repeat -1050px;
+    background: url('img/BioSectionBG.jpg') no-repeat -1150px;
     height: 800px;
   }
 
